--- a/index.html
+++ b/index.html
@@ -2,227 +2,209 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<title>Geometry Dash Web</title>
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+<title>Geometry Dash HTML</title>
 <style>
 html,body{
   margin:0;
+  padding:0;
   background:#000;
   overflow:hidden;
-  touch-action:manipulation;
-  user-select:none;
+  touch-action:none;
+  font-family:Arial,Helvetica,sans-serif;
 }
-canvas{display:block;margin:auto}
+canvas{
+  display:block;
+  background:#000;
+}
 #ui{
   position:fixed;
   top:10px;
   left:50%;
   transform:translateX(-50%);
   color:#fff;
-  font:18px Arial;
-  text-shadow:0 0 10px cyan;
+  font-size:18px;
+  text-shadow:0 0 10px #0ff;
 }
-#msg{
+#restart{
   position:fixed;
-  inset:0;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  font-size:28px;
+  bottom:20px;
+  left:50%;
+  transform:translateX(-50%);
   color:#fff;
-  background:rgba(0,0,0,.6);
-  visibility:hidden;
+  font-size:14px;
+  opacity:.7;
 }
 </style>
 </head>
 <body>
 
+<canvas id="c"></canvas>
 <div id="ui">0%</div>
-<div id="msg">CLICK / TAP TO RESTART</div>
-<canvas id="game"></canvas>
-
-<audio id="music" src="music.mp3" loop></audio>
-<audio id="jump" src="jump.wav"></audio>
-<audio id="death" src="death.wav"></audio>
+<div id="restart">TAP / CLICK TO RESTART</div>
 
 <script>
-/* ================== SETUP ================== */
-const canvas = document.getElementById("game");
-const ctx = canvas.getContext("2d");
-canvas.width = innerWidth;
-canvas.height = 300;
-
-const GRAVITY = 0.9;
-const JUMP = -14;
+/* ================= CONFIG ================= */
 const SPEED = 6;
-const GROUND = 230;
+const GRAVITY = 0.9;
+const JUMP = -15;
 
-/* ================== LOAD IMAGES ================== */
+/* ================= CANVAS ================= */
+const canvas = document.getElementById("c");
+const ctx = canvas.getContext("2d");
+function resize(){
+  canvas.width = innerWidth;
+  canvas.height = innerHeight;
+}
+addEventListener("resize",resize);
+resize();
+
+/* ================= ASSETS ================= */
 const img = {};
 ["cube","spike","block","orb_yellow","pad_yellow","bg"].forEach(n=>{
-  img[n] = new Image();
-  img[n].src = n + ".png";
+  img[n]=new Image();
+  img[n].src=n+".png";
 });
+const music = new Audio("music.mp3");
+music.loop=false;
+const sJump = new Audio("jump.wav");
+const sDeath = new Audio("death.wav");
 
-/* ================== MAP (EMBED) ================== */
-const MAP_LENGTH = 12000;
-const mapObjects = [
-  {type:"spike",x:600},
-  {type:"spike",x:950},
-  {type:"orb",x:1400},
-  {type:"pad",x:1800},
-  {type:"spike",x:2300},
-  {type:"spike",x:2700},
-  {type:"orb",x:3200},
-  {type:"pad",x:3600},
-  {type:"spike",x:4200},
-  {type:"spike",x:4800},
-  {type:"orb",x:5500},
-  {type:"pad",x:6000},
-  {type:"spike",x:7000},
-  {type:"spike",x:8000},
-  {type:"spike",x:9000},
-  {type:"spike",x:10500}
-];
+/* ================= PLAYER ================= */
+let player,offset,dead,progress;
 
-/* ================== GAME STATE ================== */
-let objects = [];
-let running = false;
-let dead = false;
-let progress = 0;
-
-const player = {
-  x:80,
-  y:GROUND,
-  size:28,
-  dy:0,
-  rot:0
-};
-
-/* ================== UTILS ================== */
-function collide(a,b){
-  return a.x < b.x + b.w &&
-         a.x + a.size > b.x &&
-         a.y < b.y + b.h &&
-         a.y + a.size > b.y;
-}
-
-function glow(draw,color,blur){
-  ctx.save();
-  ctx.shadowColor = color;
-  ctx.shadowBlur = blur;
-  draw();
-  ctx.restore();
-}
-
-/* ================== GAME LOGIC ================== */
 function reset(){
-  objects = mapObjects.map(o=>({...o,y:GROUND}));
-  player.y = GROUND;
-  player.dy = 0;
-  player.rot = 0;
-  progress = 0;
-  dead = false;
-  document.getElementById("msg").style.visibility="hidden";
+  player={
+    x:200,
+    y:canvas.height-180,
+    vy:0,
+    size:48,
+    rot:0,
+    onGround:false
+  };
+  offset=0;
+  dead=false;
+  progress=0;
+  music.currentTime=0;
+  music.play();
 }
+reset();
 
+/* ================= MAP (FIXED – FULL 100%) ================= */
+const map=[
+  {x:600,type:"spike"},
+  {x:900,type:"spike"},
+  {x:1200,type:"block"},
+  {x:1350,type:"spike"},
+  {x:1600,type:"pad"},
+  {x:1900,type:"spike"},
+  {x:2200,type:"orb"},
+  {x:2600,type:"spike"},
+  {x:3000,type:"block"},
+  {x:3300,type:"spike"},
+  {x:3600,type:"spike"},
+  {x:4000,type:"pad"},
+  {x:4500,type:"spike"},
+  {x:5000,type:"block"},
+  {x:5600,type:"spike"},
+  {x:6200,type:"orb"},
+  {x:7000,type:"spike"},
+  {x:7800,type:"spike"},
+  {x:8500,type:"block"},
+  {x:9500,type:"spike"},
+  {x:11000,type:"spike"},
+  {x:13000,type:"spike"}
+];
+const MAP_END = 14000;
+
+/* ================= INPUT ================= */
 function jump(){
-  if(!running){
-    document.getElementById("music").play();
-    running = true;
-  }
-  if(player.y >= GROUND){
-    player.dy = JUMP;
-    const s = document.getElementById("jump");
-    s.currentTime = 0;
-    s.play();
+  if(dead) return reset();
+  if(player.onGround){
+    player.vy=JUMP;
+    player.onGround=false;
+    sJump.currentTime=0;
+    sJump.play();
   }
 }
+addEventListener("mousedown",jump);
+addEventListener("touchstart",e=>{e.preventDefault();jump();});
 
-function die(){
-  dead = true;
-  document.getElementById("music").pause();
-  document.getElementById("death").play();
-  document.getElementById("msg").innerText = "CLICK / TAP TO RESTART";
-  document.getElementById("msg").style.visibility="visible";
-}
-
-function win(){
-  dead = true;
-  document.getElementById("music").pause();
-  document.getElementById("msg").innerText = "LEVEL COMPLETE!";
-  document.getElementById("msg").style.visibility="visible";
-}
-
-/* ================== LOOP ================== */
+/* ================= LOOP ================= */
 function loop(){
-  if(dead) return;
-
+  requestAnimationFrame(loop);
   ctx.clearRect(0,0,canvas.width,canvas.height);
+
+  /* BG */
   ctx.drawImage(img.bg,0,0,canvas.width,canvas.height);
 
-  player.dy += GRAVITY;
-  player.y += player.dy;
-  player.rot += 0.1;
-  if(player.y > GROUND){
-    player.y = GROUND;
-    player.dy = 0;
-  }
+  if(dead) return;
 
-  objects.forEach(o=>{
-    o.x -= SPEED;
+  offset+=SPEED;
+  progress=Math.min(100,Math.floor(offset/MAP_END*100));
+  document.getElementById("ui").innerText=progress+"%";
+
+  /* PLAYER PHYSICS */
+  player.vy+=GRAVITY;
+  player.y+=player.vy;
+  if(player.y>canvas.height-180){
+    player.y=canvas.height-180;
+    player.vy=0;
+    player.onGround=true;
+  }
+  player.rot+=0.1;
+
+  /* DRAW MAP */
+  for(const o of map){
+    const x=o.x-offset+player.x;
+    const y=canvas.height-180;
+    if(x<-100||x>canvas.width+100) continue;
 
     if(o.type==="spike"){
-      glow(()=>{
-        ctx.drawImage(img.spike,o.x,o.y-40,30,40);
-      },"#ff0055",18);
-
-      if(collide(player,{x:o.x,y:o.y-40,w:30,h:40})) die();
+      ctx.drawImage(img.spike,x,y-48,48,48);
+      if(hit(x,y-48,48,48)) die();
     }
-
-    if(o.type==="orb"){
-      ctx.drawImage(img.orb_yellow,o.x,o.y-50,30,30);
-      if(collide(player,{x:o.x,y:o.y-50,w:30,h:30})) jump();
+    if(o.type==="block"){
+      ctx.drawImage(img.block,x,y-48,48,48);
+      if(hit(x,y-48,48,48)) die();
     }
-
     if(o.type==="pad"){
-      ctx.drawImage(img.pad_yellow,o.x,o.y-20,40,20);
-      if(collide(player,{x:o.x,y:o.y-20,w:40,h:20})) jump();
+      ctx.drawImage(img.pad_yellow,x,y-32,48,32);
+      if(hit(x,y-32,48,32)){
+        player.vy=JUMP*1.3;
+      }
     }
-  });
+    if(o.type==="orb"){
+      ctx.drawImage(img.orb_yellow,x,y-80,32,32);
+      if(hit(x,y-80,32,32)&&!player.onGround){
+        player.vy=JUMP*1.2;
+      }
+    }
+  }
 
-  glow(()=>{
-    ctx.save();
-    ctx.translate(player.x+14,player.y+14);
-    ctx.rotate(player.rot);
-    ctx.drawImage(img.cube,-14,-14,28,28);
-    ctx.restore();
-  },"#00ffff",20);
-
-  progress = Math.min(
-    100,
-    Math.floor(((-objects[0].x + 400) / MAP_LENGTH) * 100)
-  );
-  document.getElementById("ui").innerText = progress + "%";
-
-  if(progress >= 100) win();
-
-  requestAnimationFrame(loop);
+  /* DRAW PLAYER + GLOW */
+  ctx.save();
+  ctx.translate(player.x+24,player.y+24);
+  ctx.rotate(player.rot);
+  ctx.shadowColor="#0ff";
+  ctx.shadowBlur=25;
+  ctx.drawImage(img.cube,-24,-24,48,48);
+  ctx.restore();
 }
-
-/* ================== INPUT ================== */
-addEventListener("keydown",e=>e.code==="Space"&&jump());
-addEventListener("click",()=>dead?(reset(),loop()):jump());
-addEventListener("touchstart",e=>{
-  e.preventDefault();
-  dead?(reset(),loop()):jump();
-});
-
-/* ================== START ================== */
-reset();
 loop();
-</script>
 
+/* ================= COLLISION ================= */
+function hit(x,y,w,h){
+  return player.x< x+w &&
+         player.x+48> x &&
+         player.y< y+h &&
+         player.y+48> y;
+}
+function die(){
+  dead=true;
+  music.pause();
+  sDeath.play();
+}
+</script>
 </body>
 </html>
-
