--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-<title>GeometryDash Sex</title>
+<title>Geometry Dash LGBT</title>
 
 <style>
 html,body{
@@ -22,7 +22,7 @@ canvas{display:block}
   transform:translateX(-50%);
   color:#fff;
   font-size:18px;
-  text-shadow:0 0 10px #0ff;
+  text-shadow:0 0 10px #f0f;
 }
 #hint{
   position:fixed;
@@ -49,6 +49,11 @@ canvas{display:block}
   cursor:pointer;
   text-shadow:0 0 8px #0ff;
 }
+.level.devil{
+  border-color:#f00;
+  color:#f55;
+  text-shadow:0 0 10px #f00;
+}
 .level:hover{background:#022}
 </style>
 </head>
@@ -57,12 +62,13 @@ canvas{display:block}
 
 <canvas id="c"></canvas>
 <div id="ui">0%</div>
-<div id="hint">TAP / CLICK TO JUMP</div>
+<div id="hint">TAP / LEFT CLICK TO JUMP</div>
 
 <div id="menu">
   <h2>SELECT LEVEL</h2>
-  <div class="level" onclick="startLevel(0)">Stereo Madness</div>
+  <div class="level" onclick="startLevel(0)">Level cho chó chơi</div>
   <div class="level" onclick="startLevel(1)">Back on Track</div>
+  <div class="level devil" onclick="startLevel(2)">😈 DEVIL MODE</div>
 </div>
 
 <script>
@@ -108,9 +114,6 @@ const LEVELS=[
     {x:3200,t:"spike"},
     {x:3800,t:"block"},
     {x:4500,t:"spike"},
-    {x:5200,t:"pad"},
-    {x:6000,t:"orb"},
-    {x:7000,t:"spike"},
   ]
 },
 {
@@ -126,9 +129,47 @@ const LEVELS=[
     {x:3000,t:"spike"},
     {x:3600,t:"block"},
     {x:4200,t:"spike"},
-    {x:5200,t:"pad"},
+  ]
+},
+{
+  name:"DEVIL MODE",
+  music:"music_devil.mp3",
+  length:18000,
+  map:[
+    {x:500,t:"spike"},
+    {x:650,t:"spike"},
+    {x:800,t:"spike"},
+    {x:1000,t:"pad"},
+    {x:1200,t:"spike"},
+    {x:1350,t:"spike"},
+    {x:1500,t:"orb"},
+    {x:1700,t:"spike"},
+    {x:1850,t:"spike"},
+    {x:2000,t:"pad"},
+    {x:2200,t:"orb"},
+    {x:2400,t:"spike"},
+    {x:2550,t:"spike"},
+    {x:2700,t:"spike"},
+    {x:2900,t:"pad"},
+    {x:3100,t:"orb"},
+    {x:3300,t:"spike"},
+    {x:3450,t:"spike"},
+    {x:3600,t:"spike"},
+    {x:3800,t:"pad"},
+    {x:4000,t:"orb"},
+    {x:4200,t:"spike"},
+    {x:4350,t:"spike"},
+    {x:4500,t:"spike"},
+    {x:4800,t:"pad"},
+    {x:5000,t:"orb"},
+    {x:5200,t:"spike"},
+    {x:5350,t:"spike"},
+    {x:5500,t:"spike"},
+    {x:5800,t:"pad"},
     {x:6000,t:"orb"},
-    {x:7200,t:"spike"},
+    {x:6200,t:"spike"},
+    {x:6350,t:"spike"},
+    {x:6500,t:"spike"},
   ]
 }
 ];
@@ -180,9 +221,7 @@ addEventListener("touchstart",e=>{e.preventDefault();jump();});
 function loop(){
   requestAnimationFrame(loop);
   ctx.clearRect(0,0,canvas.width,canvas.height);
-
   ctx.drawImage(img.bg,0,0,canvas.width,canvas.height);
-
   if(dead) return;
 
   offset+=SPEED;
@@ -196,7 +235,7 @@ function loop(){
     player.vy=0;
     player.onGround=true;
   }
-  player.rot+=0.12;
+  player.rot+=0.15;
 
   for(const o of map){
     const x=o.x-offset+player.x;
@@ -213,13 +252,13 @@ function loop(){
     if(o.t==="pad"){
       ctx.drawImage(img.pad_yellow,x,GROUND_Y-TILE/2,TILE,TILE/2);
       if(hit(x,GROUND_Y-TILE/2,TILE,TILE/2)){
-        player.vy=JUMP*1.3;
+        player.vy=JUMP*1.35;
       }
     }
     if(o.t==="orb"){
       ctx.drawImage(img.orb_yellow,x+8,GROUND_Y-TILE*2,32,32);
       if(hit(x+8,GROUND_Y-TILE*2,32,32)&&!player.onGround){
-        player.vy=JUMP*1.2;
+        player.vy=JUMP*1.25;
       }
     }
   }
@@ -227,8 +266,8 @@ function loop(){
   ctx.save();
   ctx.translate(player.x+TILE/2,player.y+TILE/2);
   ctx.rotate(player.rot);
-  ctx.shadowColor="#0ff";
-  ctx.shadowBlur=20;
+  ctx.shadowColor="#f0f";
+  ctx.shadowBlur=25;
   ctx.drawImage(img.cube,-TILE/2,-TILE/2,TILE,TILE);
   ctx.restore();
 }
